src/test/ui/issues/issue-37550.stderr
error: local variables in const fn are unstable
  --> $DIR/issue-37550.rs:12:9
   |
LL |     let t = true; //~ ERROR local variables in const fn
   |         ^

error: aborting due to previous error

